Implement proof-of-work pazzles
